<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/backButtonMarginLeft"
        android:layout_marginTop="@dimen/backButtonMarginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="551dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="100dp"
                    app:cardCornerRadius="110dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:letterSpacing="0.014"
                    android:text="@string/userName"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineSpacingExtra="18dp"
                    android:text="@string/email"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userName" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_regular"
                    android:lineSpacingExtra="18dp"
                    android:text="@string/phoneNumber"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userEmail" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="12dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center">

                                    <androidx.cardview.widget.CardView
                                        android:id="@+id/cardView4"
                                        android:layout_width="106dp"
                                        android:layout_height="72dp"
                                        app:cardBackgroundColor="@color/fillColor2"
                                        app:cardCornerRadius="8dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <androidx.constraintlayout.widget.ConstraintLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

                                            <ImageView
                                                android:id="@+id/imageView9"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="8dp"
                                                android:src="@tools:sample/avatars"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:srcCompat="@drawable/calls" />

                                            <TextView
                                                android:id="@+id/textView7"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="5dp"
                                                android:fontFamily="@font/roboto_condensed_regular"
                                                android:letterSpacing="-0.024"
                                                android:lineSpacingExtra="22dp"
                                                android:text="@string/call"
                                                android:textColor="@color/textColor"
                                                android:textSize="17sp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                                        </androidx.constraintlayout.widget.ConstraintLayout>
                                    </androidx.cardview.widget.CardView>

                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="12dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center">

                                    <androidx.cardview.widget.CardView
                                        android:id="@+id/cardView5"
                                        android:layout_width="106dp"
                                        android:layout_height="72dp"
                                        app:cardBackgroundColor="@color/fillColor2"
                                        app:cardCornerRadius="8dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <androidx.constraintlayout.widget.ConstraintLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

                                            <ImageView
                                                android:id="@+id/imageView7"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:srcCompat="@drawable/messages" />

                                            <TextView
                                                android:id="@+id/textView6"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="5dp"
                                                android:fontFamily="@font/roboto_condensed_regular"
                                                android:letterSpacing="-0.024"
                                                android:lineSpacingExtra="22dp"
                                                android:text="@string/msg"
                                                android:textColor="@color/textColor"
                                                android:textSize="17sp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                                        </androidx.constraintlayout.widget.ConstraintLayout>
                                    </androidx.cardview.widget.CardView>

                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="12dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center">

                                    <androidx.cardview.widget.CardView
                                        android:id="@+id/cardView6"
                                        android:layout_width="106dp"
                                        android:layout_height="72dp"
                                        app:cardBackgroundColor="@color/fillColor2"
                                        app:cardCornerRadius="8dp"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                        <androidx.constraintlayout.widget.ConstraintLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

                                            <ImageView
                                                android:id="@+id/imageView5"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toTopOf="parent"
                                                app:srcCompat="@drawable/mail" />

                                            <TextView
                                                android:id="@+id/textView9"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="5dp"
                                                android:fontFamily="@font/roboto_condensed_regular"
                                                android:letterSpacing="-0.024"
                                                android:lineSpacingExtra="22dp"
                                                android:text="@string/mail"
                                                android:textColor="@color/textColor"
                                                android:textSize="17sp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                                        </androidx.constraintlayout.widget.ConstraintLayout>
                                    </androidx.cardview.widget.CardView>

                                </androidx.constraintlayout.widget.ConstraintLayout>
                            </LinearLayout>
                        </TableRow>
                    </TableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>